vlib/v/checker/tests/const_cycle_decl_err.out
vlib/v/checker/tests/const_cycle_decl_err.vv:1:11: error: cycle in constant `a`
    1 | const a = a + 0
      |           ^
