vlib/v/checker/tests/const_cycle_decl_err.vv
const a = a + 0
